--- a/demo/loreal/main.css
+++ b/demo/loreal/main.css
@@ -9,9 +9,7 @@ html, body {
     margin: 0;
     overflow: hidden;
 }
-img {
-    display: block;
-}
+
 
 body {
     position: relative;
@@ -19,61 +17,87 @@ body {
     overflow: hidden;
 }
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
 #entry {
     width: 375px;
+    position: relative;
 }
 
 #container {
     background-color: #EEE;
     width: 363px;
     padding: 0 6px;
+    position: relative;
 }
 
 #ret-imgs {
     position: absolute;
     left: 20px;
+    top: 41px;
     width: 335px;
     height: 167.5px;
     background-color: black;
-
-    z-index: 5;
 }
-
-#ret-imgs div {
-    float: left;
+.ret-img {
     width: 25%;
     height: 50%;
     overflow: hidden;
-    position: relative;
-}
-#ret-imgs img {
-    width: 167.5px;
     position: absolute;
-    top: 0;
-    left: 0;
 }
-div#ret-img-1 {
+.ret-img img {
+    width: 200%;
+    position: absolute;
+}
+#ret-img-1 {
     width: 50%;
     height: 100%;
+    overflow: hidden;
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 #ret-img-1 img {
     width: 670px;
 }
-
+#ret-img-2 {
+    right: 25%;
+    top: 50%;
+}
+#ret-img-2 img {
+    top: -100%;
+}
+#ret-img-3 {
+    right: 0;
+    top: 50%;
+}
 #ret-img-3 img {
+    top: -100%;
     left: -100%;
+}
+#ret-img-4 {
+    right: 0;
+    top: 0%;
 }
 #ret-img-4 img {
-    top: -100%;
-}
-#ret-img-5 img {
-    top: -100%;
     left: -100%;
+}
+#ret-img-5 {
+    right: 25%;
+    top: 0;
+}
+
+#highlight-image {
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    left: 0;
+    top: 0;
+    position: absolute;
+}
+#highlight-image img {
+    width: 458.8px;
+    position: absolute;
+    left: -221px;
+    top: -14px;
 }
 
 #bg-2 {
@@ -88,32 +112,17 @@ div#ret-img-1 {
     width: 100%;
     height: 100%;
     background-color: black;
-    opacity: 0;
-    z-index: 1;
-}
-
-div#highlight-border {
-    position: absolute;
-    width: 458.8px;
-    height: 200px;
-    top: -17px;
-    left: -221px;
-}
-img#highlight-image {
-    width: 100%;
-    height: 100%;
-    opacity: 0;
 }
 
 #mid-anim {
     width: 375px;
     height: 204px;
     overflow: hidden;
-    position: absolute;
     left: 50%;
     top: 248px;
+    overflow: hidden;
+    position: absolute;
     margin-left: -187.5px;
-    z-index: 7;
     opacity: 0;
 }
 #mid-anim-img {
@@ -128,7 +137,6 @@ img#highlight-image {
     width: 100%;
     height: 100%;
     overflow: hidden;
-    z-index: 9;
     opacity: 0;
 }
 #paper-img {
