--- a/demo/loreal/main.css
+++ b/demo/loreal/main.css
@@ -27,6 +27,7 @@ body {
     width: 363px;
     padding: 0 6px;
     position: relative;
+    opacity: 0;
 }
 
 #ret-imgs {
@@ -106,12 +107,13 @@ body {
 }
 
 #mask {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: black;
+    opacity: 0;
 }
 
 #mid-anim {
