--- a/example/test.css
+++ b/example/test.css
@@ -1,7 +1,8 @@
-.scene {
-    width: 200px;
-    height: 200px;
-    margin: 150px auto;
-    position: relative;
-    -webkit-transform-style: preserve-3d;
+@-webkit-keyframes P236bM6I {
+    0% {
+        -webkit-transform: rotateY(0);
+    }
+    100% {
+        -webkit-transform: rotateY(360deg);
+    }
 }
