--- a/demo/test.css
+++ b/demo/test.css
@@ -1,31 +1,34 @@
-.container {
-    -webkit-perspective: 800px;
-    -webkit-perspective-origin: 50% 40%;
-}
-
-.stage {
-    -webkit-transform-style: preserve-3d;
-}
-
-.box-3d {
-    -webkit-transform-style: preserve-3d;
-    -webkit-perspective: 600px;
-}
-
-.hidden .plane {
-    -webkit-backface-visibility: hidden;
-}
-
-.plane {
-    position: absolute;
-    -webkit-transition: all ease-in-out 2s;
-    text-align: center;
-    -webkit-backface-visibility: visible;
-    width: 200px;
+.gen {
+    position: relative;
+    width: 1px;
     height: 200px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    font-size: 100px;
-    line-height: 200px;
-    opacity: 0.7;
+    display: inline-block;
+    margin: 10px 6px;
+    background: hsla(243, 100%, 85%, 1);
+    -webkit-box-shadow: 1px 1px 1px 1px hsla(0, 0%, 0%, 0.2);
+    box-shadow: 1px 1px 1px 1px hsla(0, 0%, 0%, 0.2);
+    -webkit-transition: all 1s ease;
+}
+
+.gen:before {
+    position: absolute;
+    left: -2px;
+    -webkit-border-radius: 50%;
+    border-radius: 50%;
+    width: 12px;
+    height: 10px;
+    -webkit-box-shadow: 2px 2px 2px 2px hsla(0, 0%, 0%, 0.25);
+    box-shadow: 2px 2px 2px 2px hsla(0, 0%, 0%, 0.25);
+    background: hsla(243, 95%, 85%, 1);
+    content: "";
+    top: -2px;
+}
+
+@-webkit-keyframes WuHfsn54 {
+    40% {
+        background: hsla(253, 85%, 25%, 1);
+    }
+    100% {
+        -webkit-transform: rotateX(-360deg);
+    }
 }
